--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="your.package.name">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- ✅ Permissions required for Android 9 (API 28) -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
