--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  device_preview: ^1.1.0
+  # device_preview: ^1.1.0
   syncfusion_flutter_charts: ^29.2.11
   syncfusion_flutter_gauges: ^29.2.11
   geolocator: ^14.0.1
@@ -46,6 +46,7 @@ dependencies:
   wifi_iot: ^0.3.19+2
   flutter_blue_plus: ^1.30.5
   permission_handler: ^11.3.0
+  shared_preferences: ^2.2.2
   
 
 
